# gestioncours/spring-server/src/main/resources/api-spec.yaml
@@ -54,7 +54,7 @@ paths:
             type: integer
             format: int64
             minimum: 1
-            description: The subject ID
+            description: The user ID
       responses:
         '200':
           description: success
@@ -69,31 +69,20 @@ paths:
         '404':
           description: not found
     delete:
-      tags:
-        - adminAllow
-      operationId: deleteASubject
+      description: delete a single subject on the ID
+      operationId: deleteSubject
       parameters:
-        - name: id
-          in: path
+        - in: path
+          name: id
           required: true
           schema:
             type: integer
-            format: int64
-            minimum: 1
-            description: The subject ID
       responses:
-        '200':
-          description: success
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SubjectList'
-        '401':
+        '204':
+          description: subject deleted
+        default:
           description: unexpected error
-        '403':
-          description: forbidden
-        '404':
-          description: not found
+
   /enrollments:
     post:
       operationId: createEnrollment
@@ -127,6 +116,79 @@ paths:
                   $ref: '#/components/schemas/EnrollmentList'
         '401':
           description: unexpected error
+
+  /enrollments/{id}:
+
+    get:
+      description: Returns an enrollment based on a single ID
+      operationId: find enrollment by id
+      parameters:
+        - name: id
+          in: path
+          description: ID of enrollment to fetch
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: enrollment response
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Enrollment'
+        default:
+          description: unexpected error
+
+    delete:
+      description: delete a single enrollment on the ID supplied
+      operationId: deleteEnrollment
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+      responses:
+        '204':
+          description: enrollment deleted
+        default:
+          description: unexpected error
+
+  /labos:
+    post:
+      operationId: createLabo
+      description: create a Labo
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Labo'
+      responses:
+        '201':
+          description: created
+        '401':
+          description: unexpected error
+        '403':
+          description: forbidden
+        '404':
+          description: not found
+    get:
+      description: get the list of all Labos
+      operationId: getLabos
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Labo'
+        '401':
+          description: unexpected error
+
+
 components:
   schemas:
     Subject:
@@ -145,13 +207,29 @@ components:
             id:
               type : integer
               format: int64
+    User:
+      type: object
+      properties:
+        e_mail:
+          type: string
+        first_name:
+          type: string
+        last_name:
+          type: string
+        password:
+          type: string
+        user_role:
+          type: string
     Enrollment:
       type: object
+      required:
+        - subject_id
+        - student_email
       properties:
         subject_id:
           type: integer
           format: int64
-        e_mail:
+        student_email:
           type: string
     EnrollmentList:
       allOf:
@@ -159,12 +237,16 @@ components:
         - type: object
           properties:
             id:
-             type: integer
-             format: int64
-
-
-
-
-
-
-
+              type: integer
+              format: int64
+    Labo:
+      type: object
+      required:
+        - labo_name
+        - ponderation
+      properties:
+        labo_name:
+          type: string
+        ponderation:
+          type: integer
+          format: int64
